Basic frontend skeleton established

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .App {
   text-align: center;
 }
