--- a/frontend/src/components/sideComponents/css/headerBar.css
+++ b/frontend/src/components/sideComponents/css/headerBar.css
@@ -10,23 +10,29 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(83, 13, 107);
+    background-color: #4F5178;
+    position: relative;
 }
 
 .UTALogo {
-    max-width: 20%;
+    max-width: calc(20% - 20px);
     height: 100%;
+    padding-left: 20px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    cursor: pointer;
+    z-index: 2;
 }
 
 .links {
-    width: 70%;
+    max-width: 65%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    z-index: 2;
 }
 
 .headerLink {
@@ -45,3 +51,42 @@ img {
 .headerLink:hover {
     text-decoration: underline;
 }
+
+.loginContainer {
+    width: 30%;
+    height: 100%;
+    z-index: 2;
+}
+
+.shooting-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% + 30px); /* +30px for the wave */
+  overflow: hidden;
+}
+
+.streak {
+  position: absolute;
+  top: 50%;
+  left: -100px;
+  width: 100px;
+  height: 2px;
+  background: linear-gradient(to right, #F6F3FA, transparent);
+  animation: shoot 2s linear infinite;
+}
+
+@keyframes shoot {
+  0% {
+    transform: translateX(0) opacity(1);
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(120vw);
+    opacity: 0;
+  }
+}
+
