--- a/frontend/src/components/sideComponents/css/vote.css
+++ b/frontend/src/components/sideComponents/css/vote.css
@@ -64,6 +64,25 @@
     border: 1px solid black;
 }
 
+.pollOption.selectedOption {
+  border: 3px solid #facc15;          /* yellow border */
+  border-radius: 8px;                  /* optional */
+  animation: pulseBorder 1s infinite;  /* 1s = every second */
+}
+
+@keyframes pulseBorder {
+  0% {
+    box-shadow: 0 0 0 0 rgba(250, 204, 21, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 8px rgba(250, 204, 21, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(250, 204, 21, 0);
+  }
+}
+
+
 .pollOptionPercentageCover {
     position: absolute;
     border-radius: 10px;
