--- a/frontend/src/components/mainComponents/css/profile.css
+++ b/frontend/src/components/mainComponents/css/profile.css
@@ -72,23 +72,41 @@
 
 .profileAttributeLabel {
     width: 30%;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .profileAttributeText {
     width: 65%;
+    height: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    white-space: normal;         /* allow text to wrap */
+    word-break: break-word;      /* wrap long words */
+    text-align: center;          /* center the text inside */
 }
 
 .submitProfileChanges {
     padding: 8px 16px;
-  background-color: #4285F4;
-  color: white;
-  text-decoration: none;
-  border-radius: 4px;
-  font-weight: bold;
+    background-color: #4285F4;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+@media (max-width: 720px) { 
+    .profilePicture {
+        height: 80px;
+        width: 80px;
+    }
+
+    .profileInformationDisplay {
+        width: 50%;
+        font-size: 10px;
+    }
 }
