--- a/frontend/src/components/sideComponents/css/login.css
+++ b/frontend/src/components/sideComponents/css/login.css
@@ -13,6 +13,7 @@
   text-decoration: none;
   border-radius: 4px;
   font-weight: bold;
+  font-size: 1em;
 }
 
 .logout-button {
@@ -22,6 +23,7 @@
   border-radius: 4px;
   cursor: pointer;
   margin-left: 10px;
+  font-size: 1em;
 }
 
 .logout-button a {
@@ -37,7 +39,7 @@
 } 
 
 .profile-picture {
-  font-size: 32px;
+  font-size: 2em;
   width: 40px;
   height: 40px;
   margin-right: 10px;
@@ -50,4 +52,19 @@
 .profile-icon {
     border-radius: 50%;
     object-fit: fill;
+}
+
+@media (max-width: 720px) { 
+  .login-container {
+    font-size: 12px;
+  }
+  .login-button, .logout-button {
+    padding: 4px 8px;
+    font-weight: 500;
+  }
+  .profile-picture {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+  }
 }
